--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -67,6 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="notes-page-element.html">
 <link rel="import" href="cloud-add-element.html">
+<link rel="import" href="keys-list-element.html">
 <link rel="import" href="key-add-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
