--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -27,6 +27,15 @@
             - Create dynamic dropdowns
             - Add validation
 
+            ### Keys List
+            - Put dummy keys
+            - Bind add key fab
+            - Produce an event to child to show modal
+            - Add checkboxes
+            - Sort by is default
+            - Provide sort by name option
+            - Bind to single key page (test animations here)
+
             ### Add Key
             - Set up upload key file
             - Set up iron-ajax requests for generate / save
