--- a/app/index.html
+++ b/app/index.html
@@ -260,6 +260,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Add Cloud</span>
           </a>
 
+          <a data-route="keys" href="/keys">
+            <iron-icon icon="communication:vpn-key"></iron-icon>
+            <span>Keys List</span>
+          </a>
+
           <a data-route="add-key" href="/add-key">
             <iron-icon icon="communication:vpn-key"></iron-icon>
             <span>Add Key</span>
@@ -291,7 +296,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <a data-route="plans" href="/plans">
             <iron-icon icon="account-balance-wallet"></iron-icon>
-            <span>Plans</span>
+            <span>Plans List</span>
           </a>
 
           <a data-route="feedback" href="/feedback">
@@ -302,18 +307,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <a data-route="subscriptions" href="/subscriptions">
             <iron-icon icon="today"></iron-icon>
-            <span>Subscriptions</span>
+            <span>Subscriptions List</span>
             <iron-icon icon="check" class="done-icon"></iron-icon>
           </a>
 
           <a data-route="sessions" href="/sessions">
             <iron-icon icon="account-circle"></iron-icon>
-            <span>Sessions</span>
+            <span>Sessions List</span>
           </a>
 
           <a data-route="tokens" href="/tokens">
             <iron-icon icon="communication:vpn-key"></iron-icon>
-            <span>Tokens</span>
+            <span>Tokens List</span>
           </a>
         </paper-menu>
       </paper-scroll-header-panel>
@@ -407,6 +412,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <notes-page-element data-route="notes"></notes-page-element>
 
             <cloud-add-element data-route="add-cloud"></cloud-add-element>
+
+            <keys-list-element data-route="keys"></keys-list-element>
 
             <key-add-element data-route="add-key"></key-add-element>
 
