--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -16,7 +16,7 @@
     <paper-card heading="Notes">
       <div class="card-content">
         <marked-element>
-          <div class="markdown-html"></div>
+          <div class="markdown-html markdown-body"></div>
           <script type="text/markdown">
             ### Avatar
             - Add custom gravatar component
@@ -38,7 +38,8 @@
 
             ### Add Key
             - Set up upload key file
-            - Set up iron-ajax requests for generate / save
+            - Set up iron-ajax request for save
+            - Send the new key to keys list
 
             ### Plans
             - Change the layout
