--- a/app/elements/cloud-add-element.html
+++ b/app/elements/cloud-add-element.html
@@ -51,7 +51,7 @@
         <template is="dom-if" if="[[provider]]">
           <iron-form id="form" method="post" action="/form/handler">
             <template is="dom-repeat" items="[[providerFields]]" as="field">
-              <paper-input placeholder="[[field.placeholder]]" label="[[field.label]]" value="[[field.defaultValue]]" required="[[field.required]]" error-message="[[field.errorMessage]]" autoValidate></paper-input>
+              <paper-input placeholder="[[field.placeholder]]" label="[[field.label]]" value="[[field.defaultValue]]" required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
             </template>
             <paper-button raised on-tap="_submitForm">Submit</paper-button>
           </iron-form>
