--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -25,11 +25,11 @@
       <div class="card-content">
         <template is="dom-if" if="[[user.hasPass]]">
           <iron-form id="form" method="post" action="/password">
-            <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}" autoValidate></paper-input>
+            <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
 
-            <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}" autoValidate></paper-input>
+            <paper-input label="New Password" required error-message="Please enter your new password" value="{{user.newPassword}}"></paper-input>
 
-            <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}" autoValidate></paper-input>
+            <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
 
             <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
           </iron-form>
