--- a/app/elements/tokens-list-element.html
+++ b/app/elements/tokens-list-element.html
@@ -12,6 +12,10 @@
         display: block;
       }
 
+      .search {
+        display: inline-block;
+      }
+
       .flex-horizontal-with-ratios {
         @apply(--layout-horizontal);
       }
@@ -22,8 +26,10 @@
     </style>
 
     <paper-card heading="Active Tokens">
-      <div class="card-options" hidden$="[[!showOptions]]">
-        <paper-icon-button on-tap="_deleteSelected" icon="delete"></paper-icon-button>
+      <div class="card-options">
+        <paper-icon-button icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
+        <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
+        <paper-icon-button hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
       </div>
 
       <div class="card-content">
@@ -37,7 +43,7 @@
             <div class="flexchild"></div>
           </div>
           <div class="info-body">
-            <template is="dom-repeat" items=[[tokens]] as="token">
+            <template is="dom-repeat" items=[[tokens]] as="token" filter="{{_searchTokens(searchTerm)}}">
               <token-item-element token="[[token]]" index="[[index]]" count="[[tokens.length]]"></token-item-element>
             </template>
           </div>
@@ -77,9 +83,18 @@
             type: Boolean,
             value: false
           },
-          showOptions: {
+          showDeleteOption: {
             type: Boolean,
             value: false
+          },
+          showSearchOption: {
+            type: Boolean,
+            value: false
+          },
+          searchTerm: {
+            type: String,
+            value: '',
+            notify: true
           }
         },
         observers: [
@@ -90,7 +105,7 @@
           'toggleSelectedToken': '_toggleSelectedToken'
         },
         _tokensChanged: function(tokens, selectedTokens) {
-          this.set('showOptions', selectedTokens.base.length > 0);
+          this.set('showDeleteOption', selectedTokens.base.length > 0);
 
           this.set('hasTokens', tokens.base.length > 0);
 
@@ -102,8 +117,25 @@
             this.set('selectAll', true);
           }
         },
+        _searchTokens: function(searchTerm) {
+          if (searchTerm) {
+            searchTerm = searchTerm.toLowerCase();
+            return function(token) {
+              var name = token.name.toLowerCase();
+              return name.indexOf(searchTerm) != -1;
+            };
+          }
+        },
         _openAddTokenModal: function(e) {
           console.log(this.selectedTokens);
+        },
+        _toggleSearchSelected: function() {
+          var showSearchOption = !this.showSearchOption;
+          this.set('showSearchOption', showSearchOption);
+
+          if (!showSearchOption) {
+            this.set('searchTerm', '');
+          }
         },
         _selectAllChanged: function(e) {
           var selectAll = !this.selectAll;
