--- a/app/index.html
+++ b/app/index.html
@@ -339,12 +339,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <!-- Application name -->
           <div class="middle middle-container">
-            <div class="app-name">Polymer Starter Kit</div>
+            <div class="app-name">Mist.io UI Playground</div>
           </div>
 
           <!-- Application sub title -->
           <div class="bottom bottom-container">
-            <div class="bottom-title">The future of the web today</div>
+            <div class="bottom-title">We build Mist.io UI on top of web components using Polymer</div>
           </div>
         </paper-toolbar>
 
