--- a/app/elements/token-item-element.html
+++ b/app/elements/token-item-element.html
@@ -18,7 +18,7 @@
       }
 
       .revoke {
-        background-color: #d96557;
+        background-color: #dd0000;
         color: #fff;
         padding: 2px 6px;
       }
