--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -18,6 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../bower_components/iron-signals/iron-signals.html">
 
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
@@ -50,7 +51,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Molecules Elements -->
 <link rel="import" href="../bower_components/marked-element/marked-element.html">
-<link rel="import" href="../bower_components/prism-element/prism-highlighter.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -64,8 +64,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="my-greeting/my-greeting.html">
+<link rel="import" href="my-greeting/my-greeting.html"
 <link rel="import" href="my-list/my-list.html">
+<link rel="import" href="dialog-element.html">
 <link rel="import" href="notes-page-element.html">
 <link rel="import" href="cloud-add-element.html">
 <link rel="import" href="keys-list-element.html">
