iron-list tests / iron-form implementation for login

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -19,6 +19,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../bower_components/iron-signals/iron-signals.html">
+<link rel="import" href="../bower_components/iron-list/iron-list.html">
+<link rel="import" href="../bower_components/iron-form/iron-form.html">
+<link rel="import" href="../bower_components/iron-a11y-keys/iron-a11y-keys.html">
 
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
@@ -70,6 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="notes-page-element.html">
 <link rel="import" href="cloud-add-element.html">
 <link rel="import" href="keys-list-element.html">
+<link rel="import" href="key-item-element.html">
 <link rel="import" href="key-add-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
