--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -12,49 +12,30 @@
         display: block;
       }
 
-      .btn-group paper-button {
-        width: 50%;
-        float: left;
-        display: block;
+      .flex-horizontal-with-ratios {
+        @apply(--layout-horizontal);
       }
 
-      .btn-group paper-button:first-of-type {
-        border-radius: 3px 0 0 3px;
-      }
-
-      .btn-group paper-button:last-of-type {
-        border-radius: 0 3px 3px 0;
-      }
-
-      paper-dialog {
-        min-width: 400px;
-        position: relative;
-      }
-
-      paper-dialog paper-icon-button {
-        position: absolute;
-        margin: 0;
-        top: 18px;
-        right: 14px;
-      }
-
-      paper-dialog paper-button {
-        display: block;
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-dialog paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
+      .flexchild {
+        @apply(--layout-flex);
       }
     </style>
 
     <paper-card heading="Keys">
       <div class="card-content">
-        <p>Put some dummy keys here</p>
+        <div class="info-head flex-horizontal-with-ratios">
+          <div class="flexchild">
+            <paper-checkbox>Νame</paper-checkbox>
+          </div>
+          <div class="flexchild">Default</div>
+        </div>
+        <div class="info-body">
+          <iron-list items="[[keys]]" as="key" sort="_computeSort">
+            <template>
+              <key-item-element key="[[key]]"></key-item-element>
+            </template>
+          </iron-list>
+        </div>
       </div>
     </paper-card>
   </template>
@@ -68,12 +49,24 @@
 
         properties: {
           keys: {
-            type: Object,
-            value: {}
+            type: Array,
+            value: [{
+              id: "test2",
+              isDefault: false
+            }, {
+              id: "primary",
+              isDefault: true
+            }, {
+              id: "kvm",
+              isDefault: false
+            }]
           }
         },
         ready: function() {
 
+        },
+        _computeSort: function(a, b) {
+          return a.isDefault === b.isDefault ? 0 : (a.isDefault ? -1 : 1);
         }
       });
     })();
