--- a/app/elements/login-element.html
+++ b/app/elements/login-element.html
@@ -42,9 +42,7 @@
       <div class="card-content">
         <paper-button raised on-tap="_openLoginModal">Do you want to login?</paper-button>
 
-        <template is="dom-if" if="[[_computeFormReady(user.email, user.password)]]">
-          <h2>I have your data my friend with email: [[user.email]]!</h2>
-        </template>
+        <h2 hidden$="[[!formReady]]">I have your data my friend with email: [[user.email]]!</h2>
       </div>
     </paper-card>
 
@@ -52,15 +50,18 @@
       <h2>Sign In</h2>
       <paper-icon-button icon="clear" on-tap="_closeLoginModal"></paper-icon-button>
       <paper-dialog-scrollable>
-        <iron-form id="form" method="post" action="/login">
-          <paper-input type="email" label="Email" required error-message="Please enter your email" value="{{user.email}}"></paper-input>
-          <paper-input type="password" label="Password" required error-message="Please enter your password" value="{{user.password}}"></paper-input>
-          <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
-        </iron-form>
+        <form is="iron-form" id="loginForm" method="post" action="/api/v1/login" novalidate>
+          <paper-input id="email" name="email" type="email" label="Email" required error-message="Please enter a valid email address" value="{{user.email}}" on-change="_trackErrors" auto-validate></paper-input>
+
+          <paper-input id="password" name="password" type="password" label="Password" required error-message="Please enter your password" value="{{user.password}}" on-change="_trackErrors" auto-validate></paper-input>
+
+          <!-- <button type="submit">Submit</button> -->
+          <paper-button id="submitBtn" on-tap="_submitForm" disabled$="[[!formReady]]" raised>Submit</paper-button>
+        </form>
       </paper-dialog-scrollable>
     </paper-dialog>
 
-    <iron-ajax id="ajax" url="/account" method="POST" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
+    <!-- <iron-ajax id="ajax" url="/api/v1/login" method="POST" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax> -->
   </template>
 
   <script>
@@ -75,8 +76,8 @@
             type: Object,
             value: function() {
               return {
-                email: null,
-                password: null
+                email: '',
+                password: ''
               }
             },
             notify: true
@@ -115,17 +116,25 @@
         _closeLoginModal: function(e) {
           this.$.loginModal.close();
         },
+        _trackErrors: function(e) {
+            console.log(e);
+        },
         _submitForm: function(e) {
           //   e.preventDefault();
-          var form = document.getElementById('form');
+          console.log(this.$.loginForm.validate(), this.$.loginForm.serialize());
+          //   var loginForm = this.$.loginForm;
+          //   console.log(e, loginForm);
           //   console.log(form.serialize(), form.validate());
+          //   console.log(this.$.loginForm.validate(), this.$.email.invalid, this.$.password.invalid);
         },
         _modalClosed: function() {
           this._formReset();
         },
         _formReset: function() {
-          this.set('user.email', null);
-          this.set('user.password', null);
+          this.set('user.email', '');
+          this.set('user.password', '');
+          this.$.email.invalid = false;
+          this.$.password.invalid = false;
         },
         _ajaxRequest: function() {
           this.set('sendingData', true);
