--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -47,18 +47,12 @@
             - Remove jQuery logic in the forms handlers
 
             ### Sessions
-            - Add select options
-            - Add search
-            - Add delete option for selected
+            - Use all functionality from tokens
 
             ### Tokens
-            - Add select options
-            - Add search
-            - Add delete option for selected
+            - Use results of search
 
             ### Add Token
-            - Send event from parent to child
-            - Create forms in modal
             - Finish all forms handling
             - Send the new token to the parent element with an event
           </script>
