add globally reusable toast element with parameters and custom closing button

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -70,6 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-greeting/my-greeting.html"
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="dialog-element.html">
+<link rel="import" href="notification-element.html">
 <link rel="import" href="notes-page-element.html">
 <link rel="import" href="cloud-add-element.html">
 <link rel="import" href="keys-list-element.html">
