--- a/app/index.html
+++ b/app/index.html
@@ -443,6 +443,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <dialog-element></dialog-element>
 
+    <notification-element></notification-element>
+
     <paper-toast id="toast">
       <span class="toast-hide-button" role="button" tabindex="0" onclick="app.$.toast.hide()">Ok</span>
     </paper-toast>
