fix gravatar element / update with an event when user's details get updated

--- a/app/elements/details-element.html
+++ b/app/elements/details-element.html
@@ -139,6 +139,13 @@
           };
 
           console.log(payload);
+          this.fire('iron-signal', {
+            name: 'user-menu',
+            data: {
+              firstName: this.user.firstName,
+              lastName: this.user.lastName
+            }
+          });
 
           //   this.$.ajax.body = payload;
           //   this.$.ajax.generateRequest();
