--- a/app/index.html
+++ b/app/index.html
@@ -333,6 +333,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <span class="space"></span>
 
+          <user-menu-element></user-menu-element>
+
           <!-- Toolbar icons -->
           <paper-icon-button icon="refresh"></paper-icon-button>
           <paper-icon-button icon="search"></paper-icon-button>
