--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -55,6 +55,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Molecules Elements -->
 <link rel="import" href="../bower_components/marked-element/marked-element.html">
 
+<!-- Extra Components -->
+<link rel="import" href="../bower_components/gravatar-component/gravatar-component.html">
+
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
@@ -90,4 +93,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="tokens-list-element.html">
 <link rel="import" href="token-item-element.html">
 <link rel="import" href="token-add-element.html">
+<link rel="import" href="user-menu-element.html">
 <link rel="import" href="users.html">
