--- a/app/index.html
+++ b/app/index.html
@@ -336,8 +336,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <user-menu-element></user-menu-element>
 
           <!-- Toolbar icons -->
-          <paper-icon-button icon="refresh"></paper-icon-button>
-          <paper-icon-button icon="search"></paper-icon-button>
+          <!-- <paper-icon-button icon="refresh"></paper-icon-button>
+          <paper-icon-button icon="search"></paper-icon-button> -->
 
           <!-- Application name -->
           <div class="middle middle-container">
